[package]
name = "desse-derive"
version = "0.1.0"
authors = ["Devashish Dixit <devashish@crypto.com>"]
license = "MIT"
description = "Ultra fast binary serialization and deserialization for types with size known at compile time."
homepage = "https://github.com/devashishdxt/desse"
repository = "https://github.com/devashishdxt/desse"
categories = ["encoding"]
keywords = ["serialization", "encoding", "binary", "macro"]
readme = "README.md"
edition = "2018"

[badges]
travis-ci = { repository = "devashishdxt/desse" }

[dependencies]
syn = "0.15"
quote = "0.6"
proc-macro2 = "0.4"

[lib]
name = "desse_derive"
path = "src/lib.rs"
doctest = false
proc-macro = true
