[package]
name = "desse"
version = "0.1.0"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
edition = "2018"

[dependencies]
desse-derive = { path = "../desse-derive", optional = true }

[dev-dependencies]
rand = "0.6"
criterion = "0.2"
byteorder = "1.3"
serde = "1.0"
serde_derive = "1.0"
bincode = "1.1"

[features]
default = ["derive"]
derive = ["desse-derive"]

[[bench]]
name = "primitive_benchmark"
harness = false

[[bench]]
name = "struct_benchmark"
harness = false
