[package]
name = "desse"
version = "0.1.1"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
license = "MIT"
description = "Ultra fast binary serialization and deserialization for types with size known at compile time."
homepage = "https://github.com/devashishdxt/desse"
repository = "https://github.com/devashishdxt/desse"
categories = ["encoding"]
keywords = ["serialization", "encoding", "binary", "no_std"]
readme = "README.md"
edition = "2018"

[badges]
travis-ci = { repository = "devashishdxt/desse" }

[lib]
name = "desse"
path = "src/lib.rs"
doctest = false

[dependencies]
desse-derive = { path = "../desse-derive", optional = true }

[dev-dependencies]
rand = "0.6"
criterion = "0.2"
byteorder = "1.3"
serde = "1.0"
serde_derive = "1.0"
bincode = "1.1"

[features]
default = ["derive"]
derive = ["desse-derive"]

[[bench]]
name = "struct_benchmark"
harness = false
